fixed the length full button to align with nav bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -90,7 +90,7 @@ button.light:active{
     width: 100%;
 }
 .full-h{
-    width: 100%;
+    width: 231px;
     background-color: #93aebb;
     border-color: #90A4AE;
   }
